[package]
name = "profit-distribution"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = {version = "0.4.2", git = "https://github.com/stellar/rs-soroban-sdk", rev = "135c3c8"}
soroban-auth = {version = "0.4.2", git = "https://github.com/stellar/rs-soroban-sdk", rev = "135c3c8"}

[dev-dependencies]
soroban-sdk = { version = "0.4.2",  git = "https://github.com/stellar/rs-soroban-sdk", rev = "135c3c8", features = ["testutils"] }
soroban-auth = {version = "0.4.2", git = "https://github.com/stellar/rs-soroban-sdk", rev = "135c3c8", features = ["testutils"] }


[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


